// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders with danger variant 1`] = `
<DocumentFragment>
  <div
    class="badge danger"
  >
     Danger 
  </div>
</DocumentFragment>
`;

exports[`Badge renders with default variant 1`] = `
<DocumentFragment>
  <div
    class="badge default"
  >
     Default 
  </div>
</DocumentFragment>
`;

exports[`Badge renders with warning variant 1`] = `
<DocumentFragment>
  <div
    class="badge warning"
  >
     Warning 
  </div>
</DocumentFragment>
`;
